apps/metube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
    spec:
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube:2026.10.09
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: download-volume
              mountPath: /downloads
              subPath: public/downloads/metube
      volumes:
        - name: download-volume
          persistentVolumeClaim:
            claimName: media-pvc
