apps/metube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metube-service
spec:
  selector:
    app: metube
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
