apps/metube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: metube.solveir.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube-service
                port:
                  number: 8081
  tls:
    - hosts:
        - metube.solveir.icu
      secretName: metube-tls
